# datasailr

./: .gitignore  DESCRIPTION  HISTORY  NAMESPACE  NEWS.md  README.md  cleanup  cleanup.win  confdefs.h  configure.ac  configure.win  paper.bib  paper.md
R/: data_sailr_main.R  data_sailr_test.R
exec/: compileAttr.sh
inst/: COPYRIGHTS
inst/unit_tests/: test_arithmetic.R  test_if.R  test_regexp.R
man/: Rd_file_format  author.Rd  dataSailr-package.Rd  datasailr-package.Rd  sail.Rd  test_sail.Rd
src/: Makevars.in  Makevars.win  data_sailr_cpp_main.cpp  datasailr_ext_func.cpp  datasailr_ext_func.hpp
tests/: unit_test_entry.R
